; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mlx5/mlx5_ib/extr_mlx5_ib_main.c_set_proto.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mlx5/mlx5_ib/extr_mlx5_ib_main.c_set_proto.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@fte_match_set_lyr_2_4 = common dso_local global i32 0, align 4
@ip_protocol = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i32, i32)* @set_proto to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_proto(i8* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* @fte_match_set_lyr_2_4, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = load i32, i32* @ip_protocol, align 4
  %12 = load i32, i32* %7, align 4
  %13 = call i32 @MLX5_SET(i32 %9, i8* %10, i32 %11, i32 %12)
  %14 = load i32, i32* @fte_match_set_lyr_2_4, align 4
  %15 = load i8*, i8** %6, align 8
  %16 = load i32, i32* @ip_protocol, align 4
  %17 = load i32, i32* %8, align 4
  %18 = call i32 @MLX5_SET(i32 %14, i8* %15, i32 %16, i32 %17)
  ret void
}

declare dso_local i32 @MLX5_SET(i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
